<resources>
    <string name="app_name">T2Demo+</string>

    <!--声波-->
    <string name="permission_lack_record">缺少录音权限</string>
    <string name="permission_lack_record_info">请添加录音权限，否则无法使用</string>
    <string name="send_data">发送数据</string>
    <string name="stop_send">停止发送</string>
    <string name="start_listen">开始监听</string>
    <string name="stop_listen">停止监听</string>
    <string name="state">状态:%1$s%2$s</string>
    <string name="state_listening_sonic">正在监听声波...</string>
    <string name="state_stop_listening_sonic">停止监听声波</string>
    <string name="state_receiving_data">正在接收数据...</string>
    <string name="state_receiving_successful">接收数据成功</string>
    <string name="state_receiving_failed">（接收数据失败！）</string>


    <!-- 眼镜设置 -->
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="language">语言设置</string>
    <string name="language_zh">中文</string>
    <string name="language_us">English</string>
    <string name="language_summary">设置语言</string>
    <string name="reset">重置</string>
    <string name="factory_reset">恢复出厂设置</string>
    <string name="volume">眼镜音量设置</string>
    <string name="storage">存储</string>
    <string name="bettery">电量</string>
    <string name="check_update">系统更新</string>
    <string name="check_new_versions">发现新版是否更新?</string>
    <string name="update_error">更新失败</string>
    <string name="not_need_update">你的版本已是最新,不需要更新</string>
    <string name="glasses_update_progress"> 更新进度%s </string>
    <string name="storage_space_used">剩余%1$s  (共%2$s)</string>
    <string name="refresh">刷新</string>
    <string name="glasses_msg_title">状态</string>
    <string name="glasses_sys_title">设备设置</string>
    <string name="glasses_photo_resolution_title">照片分辨率</string>
    <string name="glasses_video_resolution_title">录像分辨率</string>
    <string name="glasses_video_time_title">录像时长</string>

    <string name="glasses_mic_mute_title">设备MIC静音</string>
    <string name="glasses_mute_title">设备静音</string>

    <string name="glasses_fps_title">录像直播帧数</string>
    <string name="glasses_video_type_title">录像直播编码格式</string>
    <string name="glasses_live_title">直播分辨率</string>
    <string name="glasses_wifi_title">眼镜WiFi</string>
    <string name="glasses_loop_video">循环录像</string>
    <string name="glasses_ip_title">眼镜IP</string>

    <string-array name="language">
        <item>@string/language_zh</item>
        <item>@string/language_us</item>
    </string-array>

    <string-array name="photoTResolution">
        <item>640*480</item>
        <item>1280*720</item>
        <item>1920*1080</item>
        <item>2592*1944</item>
    </string-array>

    <string-array name="liveTResolutionValue">
        <item>640*480</item>
        <item>1280*720</item>
        <item>1920*1080</item>
    </string-array>

    <string-array name="videoResolution">
        <item>480</item>
        <item>720</item>
        <item>1080</item>
    </string-array>

    <string-array name="videoDuration">
        <item>30s</item>
        <item>1mins</item>
        <item>3mins</item>
        <item>5mins</item>
        <item>10mins</item>
        <item>unlimited</item>
    </string-array>

    <string-array name="fps">
        <item>25帧</item>
        <item>15帧</item>
    </string-array>

    <string-array name="fpsValue">
        <item>25</item>
        <item>15</item>
    </string-array>

    <string-array name="VideoTypeValue">
        <item>264</item>
        <item>265</item>
    </string-array>
    <string-array name="VideoType">
        <item>H264</item>
        <item>H265</item>
    </string-array>

    <string-array name="videoDurationValue">
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>300</item>
        <item>600</item>
        <item>-1</item>
    </string-array>

</resources>
